--- a/package.json
+++ b/package.json
@@ -17,7 +17,13 @@
     "@angular/platform-browser": "^18.0.0",
     "@angular/platform-browser-dynamic": "^18.0.0",
     "@angular/router": "^18.0.0",
+    "@pmndrs/cannon-worker-api": "^2.4.0",
+    "angular-three": "^2.0.0-beta.231",
+    "cannon-es": "^0.20.0",
+    "cannon-es-debugger": "^1.0.0",
+    "ngxtension": "^3.5.2",
     "rxjs": "~7.8.0",
+    "three": "^0.165.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
   },
@@ -25,6 +31,15 @@
     "@angular-devkit/build-angular": "^18.0.4",
     "@angular/cli": "^18.0.4",
     "@angular/compiler-cli": "^18.0.0",
+    "@types/three": "^0.165.0",
+    "prettier": "^3.3.2",
+    "prettier-plugin-organize-imports": "^3.2.4",
     "typescript": "~5.4.2"
+  },
+  "prettier": {
+    "htmlWhitespaceSensitivity": "ignore",
+    "plugins": [
+      "prettier-plugin-organize-imports"
+    ]
   }
 }
