--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "@angular/platform-browser-dynamic": "^18.0.0",
     "@angular/router": "^18.0.0",
     "@pmndrs/cannon-worker-api": "^2.4.0",
-    "angular-three": "^2.0.0-beta.231",
+    "angular-three": "^2.0.0-beta.232",
+    "angular-three-cannon": "^2.0.0-beta.232",
     "cannon-es": "^0.20.0",
     "cannon-es-debugger": "^1.0.0",
     "ngxtension": "^3.5.2",
